--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                      <div class="box_main">
                         <img src="images/img-9.png" class="image_9">
                         <div class="post_main">
-                           <h6 class="post_text">Post By :Xofram</h6>
+                           <h6 class="post_text">Post By :Yelignin farm</h6>
                            <div class="comment_main">
                               <div class="left_main">
                                  <div class="like_text">Like<span class="padding_left_10"><img src="images/like-icon.png"></span></div>
@@ -282,7 +282,7 @@
                      <div class="box_main active">
                         <img src="images/img-10.png" class="image_9">
                         <div class="post_main">
-                           <h6 class="post_text active">Post By :Xofram</h6>
+                           <h6 class="post_text active">Post By :Yelignin farm</h6>
                            <div class="comment_main">
                               <div class="left_main">
                                  <div class="like_text active">Like<span class="padding_left_10"><img src="images/like-icon.png"></span></div>
@@ -303,7 +303,7 @@
                      <div class="box_main">
                         <img src="images/img-11.png" class="image_9">
                         <div class="post_main">
-                           <h6 class="post_text">Post By :Xofram</h6>
+                           <h6 class="post_text">Post By :Yelignin farm</h6>
                            <div class="comment_main">
                               <div class="left_main">
                                  <div class="like_text">Like<span class="padding_left_10"><img src="images/like-icon.png"></span></div>
@@ -499,7 +499,7 @@
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">Copyright 2022 All Right Reserved By.<a href="https://html.design"> Free  html Templates</p>
+            <p class="copyright_text">Copyright 2022 All Right Reserved By.<a href=""> Yelignin farm</p>
          </div>
       </div>
       <!-- copyright section end -->    
